perl/trunk: remove dir

--- a/csw/mgar/pkg/perl/trunk/Makefile
+++ b/csw/mgar/pkg/perl/trunk/Makefile
@@ -20,13 +20,13 @@ MASTER_SITES = http://www.cpan.org/src/5.0/
 VENDOR_URL = http://www.perl.org
 DISTFILES  = $(NAME)-$(VERSION).tar.bz2
 PACKAGING_PLATFORMS += solaris10-i386 solaris10-sparc
-PACKAGES               = CSWperlgcc
-PKG_DESC_CSWperlgcc	       = $(DESCRIPTION)
-SPKG_DESC_CSWperlgcc	       = $(DESCRIPTION)
+PACKAGES               = CSWperl
+PKG_DESC_CSWperlgcc    = $(DESCRIPTION)
+SPKG_DESC_CSWperlgcc   = $(DESCRIPTION)
 LICENSE = Copying
 
 # GCC build (Sun Studio build has been fixed)
-GARCOMPILER = GCC5
+GARCOMPILER = GCC
 MAKE_OPT_unstable10s = -j 24
 MAKE_OPT_unstable10x = -j 4
 MAKE_OPT = $(MAKE_OPT_$(shell hostname))
@@ -37,9 +37,7 @@ IGNORE_DESTDIR = 1
 # a .git directory will cause failing upstream author tests (the source will be considered blead)
 NOGITPATCH = 1
 
-# Let put perl in a separate dir as a migration strategy
-prefix = $(BUILD_PREFIX)/perlgcc
-EXTRA_RUNPATH_DIRS = $(libdir)/perl/5.20/CORE
+EXTRA_RUNPATH_DIRS = $(libdir)/perl/5.22/CORE
 EXTRA_RUNPATH_ISALIST = $(EXTRA_RUNPATH_DIRS)
 #EXTRA_LIB = $(prefix)/$(libdir)/perl/5.20/CORE
 #EXTRA_RUNPATH_LINKER_FLAGS += $(prefix)/$(libdir)/perl/5.20/CORE/libperl.so
