mailman/trunk: add install cswusergroup

--- a/csw/mgar/pkg/mailman/trunk/Makefile
+++ b/csw/mgar/pkg/mailman/trunk/Makefile
@@ -12,6 +12,7 @@ DESCRIPTION = Mailman mailing list software
 
 MASTER_SITES = $(GNU_MIRROR)
 DISTFILES  = $(DISTNAME).tgz
+DISTFILES  += cswusergroup
 
 GARCOMPILER = SOS12U4
 
@@ -44,7 +45,7 @@ TEST_SCRIPTS =
 PYCOMPILE = 1
 EXTRA_MERGE_EXCLUDE_FILES = .*\.py[co]
 
-USERGROUP = /etc/opt/csw/pkg/CSWmailman/cswusergroup
+USERGROUP = $(sysconfdir)/pkg/CSW$(NAME)/cswusergroup
 
 CHECKPKG_OVERRIDES_CSWmailman += binary-architecture-does-not-match-placement|file=opt/csw/mailman/mail/mailman|arch_id=18|arch_name=sparcv8+
 CHECKPKG_OVERRIDES_CSWmailman += binary-architecture-does-not-match-placement|file=opt/csw/mailman/mail/mailman|arch_id=3|arch_name=i386
@@ -53,3 +54,7 @@ CHECKPKG_OVERRIDES_CSWmailman += file-with-bad-content|/usr/local|root/opt/csw/m
 
 include gar/category.mk
 
+post-install:
+	ginstall -d $(DESTDIR)$(dir $(USERGROUP))
+	cd $(WORKDIR) && ginstall cswusergroup $(DESTDIR)$(dir $(USERGROUP))
+	$(MAKECOOKIE)
