fossil/trunk: Fix BUILD_DEP_PKGS and readline/lineedit

--- a/csw/mgar/pkg/fossil/trunk/Makefile
+++ b/csw/mgar/pkg/fossil/trunk/Makefile
@@ -1,5 +1,6 @@
 # $Id$
 # TODO (release-critical prefixed with !, non release-critical with *)
+# * next release don't use readline anymore (https://www.fossil-scm.org/fossil/info/851485657643dc2c)
 # Recipe sent in by Freddy DISSAUX freddy.dsx free.fr
 
 NAME = fossil
@@ -19,16 +20,21 @@ DISTFILES = $(NAME)-src-$(VERSION).tar.gz
 VENDOR_URL = http://www.fossil-scm.org/
 
 BUILD_DEP_PKGS += CSWlibssl-dev
+BUILD_DEP_PKGS += CSWlibz-dev
 
 BUILD64 = 1
 
 WORKSRC = $(WORKDIR)/$(NAME)-src-$(VERSION)
-CONFIGURE_ARGS = $(DIRPATHS) 
-CONFIGURE_ARGS += --with-openssl=auto
-CONFIGURE_ARGS += --disable-fusefs
 
-# Remove exec_prefix from DIRPATHS:
 NODIRPATHS += --exec_prefix
+
+CONFIGURE_ARGS = $(DIRPATHS)
+CONFIGURE_ARGS += --with-openssl=auto
+CONFIGURE_ARGS += --with-zlib=$(includedir)
+CONFIGURE_ARGS += --disable-fusefs
+# Find libreadline always fail
+CONFIGURE_ARGS += --disable-lineedit
+
 # No test/check target provided by fossil
 TEST_SCRIPTS =
 
