--- a/csw/mgar/pkg/perl/trunk/Makefile
+++ b/csw/mgar/pkg/perl/trunk/Makefile
@@ -1,10 +1,9 @@
-NAME = perl
-VERSION = 5.22.0
+NAME          = perl
+VERSION       = 5.22.0
 VERSION_MAJOR = $(shell echo $(VERSION) | cut -f1-2 -d.)
-#CATEGORIES = lang
-GARTYPE = v2
-
-DESCRIPTION = A high-level, general-purpose programming language
+CATEGORIES    = lang
+GARTYPE       = v2
+DESCRIPTION   = A high-level, general-purpose programming language
 define BLURB
   Perl is a high-level, general-purpose programming language that makes easy
   things easy and hard things possible. It is optimized for scanning arbitrary
@@ -16,28 +15,27 @@ define BLURB
 endef
 
 #MASTER_SITES = manual://
-MASTER_SITES = http://www.cpan.org/src/5.0/
-VENDOR_URL = http://www.perl.org
-DISTFILES  = $(NAME)-$(VERSION).tar.bz2
+MASTER_SITES         = http://www.cpan.org/src/5.0/
+VENDOR_URL           = http://www.perl.org
+DISTFILES            = $(NAME)-$(VERSION).tar.bz2
 PACKAGING_PLATFORMS += solaris10-i386 solaris10-sparc
-PACKAGES               = CSWperl
-PKG_DESC_CSWperl    = $(DESCRIPTION)
-SPKG_DESC_CSWperl   = $(DESCRIPTION)
-LICENSE = Copying
+PACKAGES             = CSWperl
+OBSOLETED_BY_CSWperl = CSWperldoc
+PKG_DESC_CSWperl     = $(DESCRIPTION)
+SPKG_DESC_CSWperl    = $(DESCRIPTION)
+LICENSE 	     = Copying
 
 # GCC build (Sun Studio build has been fixed)
-GARCOMPILER = GCC4
+GARCOMPILER          = GCC4
 MAKE_OPT_unstable10s = -j 24
 MAKE_OPT_unstable10x = -j 4
-MAKE_OPT = $(MAKE_OPT_$(shell hostname))
-BUILD64 = 1
-ISAEXEC = 1
-IGNORE_DESTDIR = 1
-
+MAKE_OPT 	     = $(MAKE_OPT_$(shell hostname))
+BUILD64              = 1
+ISAEXEC              = 1
+IGNORE_DESTDIR       = 1
 # a .git directory will cause failing upstream author tests (the source will be considered blead)
-NOGITPATCH = 1
-
-EXTRA_RUNPATH_DIRS = $(libdir)/perl/5.22/CORE
+NOGITPATCH 	      = 1
+EXTRA_RUNPATH_DIRS    = $(libdir)/perl/5.22/CORE
 EXTRA_RUNPATH_ISALIST = $(EXTRA_RUNPATH_DIRS)
 #EXTRA_LIB = $(prefix)/$(libdir)/perl/5.20/CORE
 #EXTRA_RUNPATH_LINKER_FLAGS += $(prefix)/$(libdir)/perl/5.20/CORE/libperl.so
@@ -46,6 +44,7 @@ EXTRA_RUNPATH_ISALIST = $(EXTRA_RUNPATH_DIRS)
 RUNTIME_DEP_PKGS_CSWperl += CSWlibgcc-s1
 RUNTIME_DEP_PKGS_CSWperl += CSWlibssp0
 RUNTIME_DEP_PKGS_CSWperl += CSWlibgdbm4
+
 CHECKPKG_OVERRIDES_CSWperl += missing-dependency|CSWperl
 CHECKPKG_OVERRIDES_CSWperl += 64-bit-binaries-missing
 CHECKPKG_OVERRIDES_CSWperl += file-with-bad-content
