lang-python/django-tagging/trunk: Update to 0.4

--- a/csw/mgar/pkg/lang-python/django-tagging/trunk/Makefile
+++ b/csw/mgar/pkg/lang-python/django-tagging/trunk/Makefile
@@ -2,10 +2,10 @@
 # Distributed under the terms of the GNU General Public License v2
 
 NAME = django-tagging
-VERSION = 0.3.1
+VERSION = 0.4
 CATEGORIES = python
 GARTYPE = v2
-DESCRIPTION = A generig tagging application for Django projects
+DESCRIPTION = A generic tagging application for Django projects
 define BLURB
 	A generic tagging application for Django projects, which allows association 
 	of a number of tags with any Model instance and makes retrieval of tags 
@@ -13,23 +13,24 @@ define BLURB
 endef
 
 SPKG_SOURCEURL = http://code.google.com/p/django-tagging/downloads/detail?name=
-MASTER_SITES = $(GOOGLE_MIRROR)
-DISTNAME = $(NAME)-$(VERSION)
-DISTFILES  = $(DISTNAME).tar.gz
-UFILES_REGEX = $(NAME)-(\d+(?:\.\d+)*).tar.gz
+DISTFILES += $(DISTNAME).tar.gz
+
+# Django-Tagging 0.4 only supports Python 2.7
+MODULATIONS_PYTHON_VERSION = 2_7
+CHECKPKG_OVERRIDES_CSWpy-django-tagging += python-package-missing-py26-files
+
+BUILD_DEP_PKGS += CSWpy-setuptools
 
 PACKAGES = CSWpy-django-tagging
-CATALOGNAME = py_django_tagging
-ARCHALL_CSWpy-django-tagging = 1
-
-BUILD_DEP_PKGS += CSWpysetuptools
+SPKG_DESC_CSWpy-django-tagging = A generic tagging application for Django projects
+# PKGFILES is catchall
 RUNTIME_DEP_PKGS += CSWpy-django
+ARCHALL_CSWpy-django-tagging = 1
 
 # checkpkg can't detect python run time dependencies
 CHECKPKG_OVERRIDES_CSWpy-django-tagging += surplus-dependency|CSWpy-django
 
-
-SKIPTEST=1
+# SKIPTEST=1
 #TEST_TARGET = check
 
 include gar/category.mk
